# geo_parser

./: .gitignore  README.md  description.md  environment.yml
geovlm_poc/: .dockerignore  .env.example  Dockerfile  README.md  README_TRAINING.md  docker-compose.yml  pyproject.toml  streamlit_app.py
geovlm_poc/cnn_gate/: README.md  pick_thr.py  train_cnn_gate.py
geovlm_poc/config/: vlm_prompts.json
geovlm_poc/datasets/: README.md  build_cnn_gate_dataset.py  build_retrieval_dataset.py
geovlm_poc/scripts/: eval_retrieval.py  finetune_openclip.py  pick_clip_thr.py
geovlm_poc/src/geovlm_poc/: __init__.py  change.py  cli.py  detector.py  gates.py  geo.py  geo_utils.py  normalize.py  pipeline.py  semantic_index.py  telemetry.py  tiling.py  types.py  vlm.py
